# burr

.codex/environments/: environment.toml
rust/: AGENTS.md  CLI_PARITY.md  Cargo.toml  DEVELOPMENT.md  INTEGRATIONS_ROADMAP.md  README.md  RUST_IMPLEMENTATION_PLAN.md
rust/docs/: BURR_GOLDEN_RUNNER_CRATE_DETAILS.md  BURR_NORMALIZER_CRATE_DETAILS.md  CONTRACT_READY_PROPOSAL.md  PYTHON_ENGINE_SEKELTON.md  PYTHON_ENGINE_SKELETON.md  REFERENCE_IMPLEMENTATION_SKETCHES.md  SCENARIO_SPEC.md
rust/spec/normalizer/: README.md  v1.yaml
rust/spec/openapi/: README.md
rust/spec/scenarios/: 001_basic_linear_counter.json  002_halt_before.json  003_iterate_yields.json  004_stream_chunks.json  005_context_capture.json  README.md
rust/spec/schema/: normalizer.schema.json  run-report.schema.json  scenario.schema.json
